# agentic-migration-validator

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api-contract.md  architecture.md  artifact-schemas.md  audit-events.md  demo-script.md  evidence-references.md  fixture-plan.md  gatekeeper-invariants.md  product-requirements.md  risk-scoring-test-vectors.md  runbook-advisor-boundary.md  security-audit.md  structured-finding-schema.md
fixtures/base/: common.sql  target.sql
scripts/: diff_schema.py  enforce_gate.py  generate_runbook.py  reset_databases.sh  run_eval.py  run_workflow.py  serve_api.py  smoke_api.py  validate_scenario.py  write_artifacts.py
tests/: __init__.py  test_api.py  test_api_smoke.py  test_approvals.py  test_artifacts.py  test_audit.py  test_checksum.py  test_checksum_validation.py  test_eval_runner.py  test_fixtures.py  test_gatekeeper.py  test_live_model.py  test_readiness.py  test_risk_scoring.py  test_row_validation.py  test_run_store.py  test_run_workflow.py  test_runbook_advisor.py  test_schema_diff.py  test_schema_introspection.py  test_schema_policy.py  test_static_ui.py  test_transitions.py  test_workflow.py
tools/: __init__.py  api.py  approvals.py  artifacts.py  audit.py  checksum.py  checksum_validation.py  eval_runner.py  gatekeeper.py  live_model.py  readiness.py  risk_scoring.py  row_validation.py  run_store.py  runbook_advisor.py  schema_diff.py  schema_introspection.py  schema_policy.py  transitions.py  workflow.py
ui/: app.js  index.html  styles.css
(+19 files in other folders)
