[project]
name = "agentic-migration-validator"
version = "0.1.0"
description = "Agentic migration readiness and validation platform."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
